# Untergrundklassifizierung

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TEST_json_einlesen.ipynb  config.json  json_einlesen_und_sensoren_isolieren.py  main.py  preprocessing_quality_check.md  pyproject.toml  requirements.txt  tmp_sensors.txt
doku/: DOKU_GUIDE.md
doku/architecture/: ADRs.md  Contracts.md
doku/protocols/: Decision_Log.md
doku/roadmap/: Issues_Template.md  Issues_Template_Simple.md  Milestones.md
doku/specifications/: M2.5_Windowing.md  M2_Advanced_Signal_Processing.md  M2_Preprocessing.md  M3_Features.md  M3_Phase2_Velocity.md  M6_Artifacts_and_Reporting.md  M6_Enhancements.md
src/untergrund/: __init__.py  config.py  context.py  orchestrator.py  pipeline.py  stages.py
src/untergrund.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/untergrund/runners/: RUNNERS.md  classify.py  export.py  features.py  ingest.py  model.py  preprocess.py  select.py  window.py
src/untergrund/shared/: inspect.py  sensors.py
tests/: test_ctxpipeline_routing.py  test_features.py  test_preprocessing.py  test_sensors.py
