[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "untergrund"
version = "0.1.0"
description = "Untergrundklassifizierung – Sensor-Pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "g0ld3ner" }]

[tool.setuptools.packages.find]
where = ["src"]